--- a/autoage.ui
+++ b/autoage.ui
@@ -434,12 +434,36 @@
     </property>
     <addaction name="quit"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="radar"/>
+    <addaction name="mobslist"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="quit">
    <property name="text">
     <string>Quit</string>
+   </property>
+  </action>
+  <action name="mobslist">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Mobs list</string>
+   </property>
+  </action>
+  <action name="radar">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Radar</string>
    </property>
   </action>
  </widget>
