--- a/autoage.ui
+++ b/autoage.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>350</width>
-    <height>457</height>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>330</y>
+      <y>130</y>
       <width>80</width>
       <height>22</height>
      </rect>
@@ -34,7 +34,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>360</y>
+      <y>160</y>
       <width>80</width>
       <height>22</height>
      </rect>
@@ -316,14 +316,14 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>210</y>
+      <x>120</x>
+      <y>197</y>
       <width>47</width>
       <height>14</height>
      </rect>
     </property>
     <property name="text">
-     <string>X</string>
+     <string>toX</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -332,14 +332,14 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>210</y>
+      <x>200</x>
+      <y>197</y>
       <width>47</width>
       <height>14</height>
      </rect>
     </property>
     <property name="text">
-     <string>Y</string>
+     <string>toY</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -348,8 +348,8 @@
    <widget class="QPushButton" name="moveTo">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>230</y>
+      <x>10</x>
+      <y>210</y>
       <width>80</width>
       <height>22</height>
      </rect>
@@ -361,52 +361,52 @@
    <widget class="QDoubleSpinBox" name="toX">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>230</y>
-      <width>91</width>
-      <height>31</height>
+      <x>110</x>
+      <y>210</y>
+      <width>71</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>9</pointsize>
      </font>
     </property>
     <property name="maximum">
      <double>10000.000000000000000</double>
     </property>
     <property name="value">
-     <double>4791.810000000000400</double>
+     <double>4818.000000000000000</double>
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="toY">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>230</y>
-      <width>91</width>
-      <height>31</height>
+      <x>190</x>
+      <y>210</y>
+      <width>71</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>9</pointsize>
      </font>
     </property>
     <property name="maximum">
      <double>10000.000000000000000</double>
     </property>
     <property name="value">
-     <double>4109.520000000000437</double>
+     <double>4433.000000000000000</double>
     </property>
    </widget>
    <widget class="QLabel" name="pStatus">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>100</x>
       <y>130</y>
-      <width>161</width>
-      <height>21</height>
+      <width>160</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="font">
@@ -418,17 +418,40 @@
      <string>Player is waiting</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="startPos">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>130</y>
-      <width>191</width>
-      <height>31</height>
+      <x>100</x>
+      <y>160</y>
+      <width>241</width>
+      <height>20</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>Start position</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="mobs">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>240</y>
+      <width>251</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Mobs around: 0</string>
     </property>
    </widget>
   </widget>
