--- a/mobslist.ui
+++ b/mobslist.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>454</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,9 +18,27 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>621</width>
-     <height>431</height>
+     <width>630</width>
+     <height>430</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="filtermobs">
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>440</y>
+     <width>91</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Filter mobs</string>
    </property>
   </widget>
  </widget>
