--- a/res.qrc
+++ b/res.qrc
@@ -6,6 +6,7 @@
         <file>deadmob.png</file>
         <file>friendlymob.png</file>
         <file>point.png</file>
+        <file>endpoint.png</file>
     </qresource>
     <qresource prefix="/settings">
         <file>settings.ini</file>
