--- a/waypoints.ui
+++ b/waypoints.ui
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>60</y>
+     <y>100</y>
      <width>80</width>
      <height>22</height>
     </rect>
@@ -43,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>100</y>
+     <y>140</y>
      <width>80</width>
      <height>22</height>
     </rect>
@@ -60,6 +60,19 @@
      <width>281</width>
      <height>361</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pointDelete">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>60</y>
+     <width>80</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Delete point</string>
    </property>
   </widget>
  </widget>
